syntax = "proto2";

package proto;

message Layer2d {
  optional string image_file = 1;
  // NOTE: Are these redundant? Do we always need to save images? If so they come with pixel values...
  optional float width = 2;
  optional float height = 3;
}

message Map2d {
  // Maps get saved out as multiple layers of images, this contains them in order.
  repeated Layer2d layers = 1;
};
